--- a/clients/web-client/src/app/pages/the-proyect/the-proyect.component.html
+++ b/clients/web-client/src/app/pages/the-proyect/the-proyect.component.html
@@ -6,9 +6,9 @@
         <div class="main-content">
 
             <div class="section part1">
-                <div class="title">
+                {% comment %} <div class="title">
                     Distribution is the most valuable asset in the world
-                </div>
+                </div> {% endcomment %}
                 <div class="subtitle">
                     Let's make a decentralized distribution machine.
                 </div>
