--- a/clients/web-client/src/app/pages/home/home.component.scss
+++ b/clients/web-client/src/app/pages/home/home.component.scss
@@ -1,10 +1,10 @@
 @import "../../../variables.scss";
 
-.top-container.bg-color {
-  background-image: linear-gradient(-160deg, transparent, #1b1b1b),
-  url("/assets/mobile.png");
-  opacity: 0.98;
-}
+// .top-container.bg-color {
+//   background-image: linear-gradient(-160deg, transparent, #1b1b1b),
+//   url("/assets/mobile.png");
+//   opacity: 0.98;
+// }
 
 [challenges-container] {
   padding-top: 1rem;
