--- a/clients/web-client/src/app/pages/the-proyect/the-proyect.component.html
+++ b/clients/web-client/src/app/pages/the-proyect/the-proyect.component.html
@@ -16,9 +16,9 @@
 
             <div class="section part2">
                 <div class="title">
-                    Gonna Make It is a community-owned brand with the mission to bring CT’s GMI good vibes to the world.
+                    {% comment %} Gonna Make It is a community-owned brand with the mission to bring CT’s GMI good vibes to the world.
                     GMI will start by allowing people and organizations to do more with their favourite games, assets,
-                    and brands through gonnamakeit.app.
+                    and brands through gonnamakeit.app. {% endcomment %}
 
                     @gmi_dao is building an MVP with Clash Royale. **coming soon**
                     The MVP’s ME and CMs will be offered to DAOs and marketers as alternative marketing and recruiting
