--- a/clients/web-client/src/app/pages/home/home.component.scss
+++ b/clients/web-client/src/app/pages/home/home.component.scss
@@ -52,9 +52,9 @@
     display: none;
   }
 
-  .specific-height {
-    height: 5rem;
-  }
+  // .specific-height {
+  //   height: 5rem;
+  // }
 
   @media screen and (max-width: 600px) {
     .sub-heading {
