--- a/clients/web-client/src/app/pages/home/home.component.scss
+++ b/clients/web-client/src/app/pages/home/home.component.scss
@@ -10,19 +10,19 @@
   padding-top: 1rem;
 }
 
-.container1 {
+// .container1 {
 
-  .main-heading {
-    display: inline-block;
-    position: relative;
-  }
+//   .main-heading {
+//     display: inline-block;
+//     position: relative;
+//   }
 
-  .sub-heading {
-    left: 57%;
-    position: absolute;
-    top: 72%;
+//   .sub-heading {
+//     left: 57%;
+//     position: absolute;
+//     top: 72%;
 
-  }
+//   }
 
   .f-right {
     float: right;
