--- a/clients/web-client/src/app/pages/home/home.component.scss
+++ b/clients/web-client/src/app/pages/home/home.component.scss
@@ -6,9 +6,9 @@
   opacity: 0.98;
 }
 
-// [challenges-container] {
-//   padding-top: 1rem;
-// }
+[challenges-container] {
+  padding-top: 1rem;
+}
 
 .container1 {
 
