--- a/clients/web-client/src/app/pages/about-us/about-us.component.html
+++ b/clients/web-client/src/app/pages/about-us/about-us.component.html
@@ -10,15 +10,7 @@
             </div>
 
             <div class="team-section">
-                
-                <div class="team-list">
-                    <div (click)="selectedMember=member"
-                         *ngFor="let member of teamMembers"
-                         [attr.selected]="selectedMember ===  member"
-                         class="team-item cursor-pointer">
-                        <img [src]="member.profilePictureUrl" class="image">
-                    </div>
-                </div>
+                <div class="title">THE TEAM</div>
 
                 <div *ngIf="selectedMember" class="about-container">
                     <div class="about">{{ selectedMember.about }}</div>
