--- a/clients/web-client/src/app/pages/home/home.component.scss
+++ b/clients/web-client/src/app/pages/home/home.component.scss
@@ -17,12 +17,12 @@
     position: relative;
   }
 
-  // .sub-heading {
-  //   left: 57%;
-  //   position: absolute;
-  //   top: 72%;
+  .sub-heading {
+    left: 57%;
+    position: absolute;
+    top: 72%;
 
-  // }
+  }
 
   .f-right {
     float: right;
